Import leaflet css

--- a/frontend/client/src/app/globals.css
+++ b/frontend/client/src/app/globals.css
@@ -3,6 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "leaflet/dist/leaflet.css";
+
 :root {
   --background: #fafcf1;
   --foreground: #171717;
